header left side is ready

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,7 +1,9 @@
     
       /*-- colors --*/ 
 
-  $main-text-color: #626687;
+  $main-text-color: #626687;     
+  $main-title-color: #1B1C57;
+
      
    
 
