--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,8 +8,9 @@
      body {
       min-height:100vh; 
       color: $main-text-color; 
-      font-family: 'Lexend', sans-serif; 
-      font-weight: 400;
+      // font-family: 'Lexend', sans-serif; 
+      // font-weight: 400; 
+      @extend %lexend-400;
       font-style: normal;
       font-size: 14px;
       line-height: 24px;
@@ -21,7 +22,12 @@
         margin: 0 auto; 
         padding: 0 15px;  
         border: 1px solid green; 
-        border: 1px solid transparent;
-    } 
+        //border: 1px solid transparent;
+    }    
+     
+    .majority-title{ 
+      color: $main-title-color; 
+      line-height: 40px;
+    }
  
 
