--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,8 +7,12 @@
   
 .header-inner{ 
   border: 1px solid fuchsia; 
-  margin-left: 120px;   
-  &__left{ 
+  margin-left: 120px;    
+  display: flex; 
+
+  &__left{  
+    width: 100%; 
+    max-width: 599px;
     padding-top: 46px;
   } 
   &__logo{ 
@@ -76,7 +80,8 @@
    width: 109px;   
    height: 48px;  
    padding: 13px 44px 13px 16px;
-   border-radius: 32px; 
+   border-radius: 32px;  
+   cursor: pointer;
    border: 1px solid transparent; 
    background-color: #10B981; 
    color:#FFF; 
@@ -115,9 +120,95 @@
     justify-content: space-between; 
     align-items: center;
 
- } 
+ }  
+  
+  
+ &__right{ 
+   border: 1px solid fuchsia;  
+   width: 100%;
+   width: 720px; 
+   padding-top: 46px;  
+   background-image: url('../images/header/header-right-bg.jpg');  
+   background-repeat: no-repeat; 
+   background-size: cover; 
+   background-position: center;  
+   border-radius: 0px 0px 0px 80px;  
+    
+   .menu {
+    margin-left: 54px;
 
+    &__list {
+        display: flex;
+    }
+
+    &__item + .menu__item {
+        margin-left: 24px;
+    }
+
+
+    &__link {
+        @extend %lexend-600;
+        color: #F0F3FD;
+        font-size: 16px;
+        line-height: 18px;
+        transition: all .3s;
+        padding: 8px 16px;
+     }   
+      
+     &__btn {
+      position: relative;
+      width: 50px;
+      height: 40px;
+      border: none;
+      padding: 0;
+      background-color: transparent;
+      transition: all 0.25s;
+      display: none;
+
+      .row-top,
+      .row-middle,
+      .row-bottom {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 45px;
+          height: 3px;
+          background: #FFF;
+          transform: rotate(0);
+          transition: all 0.5s;
+      }
+
+      .row-middle {
+          transform: translateY(16px);
+      }
+
+      .row-bottom {
+          transform: translateY(33px);
+      }
+   }    
+    
+   &__btn--open { 
+
+    .row-top {
+      transform: rotate(45deg) translateY(10px) translateX(13px);
+    }
+
+    .row-middle {
+        display: none;
+    }
+       
+    .row-bottom {
+         transform: rotate(-45deg) translateY(13px) translateX(-10px); 
+     }
+   }
+    
+   }
+  }  
 }
+
+ 
+
+
 
 
 @import 'media'; 
