header section ready

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -21,7 +21,8 @@
         max-width: 1470px; 
         margin: 0 auto; 
         padding: 0 15px;  
-        border: 1px solid green; 
+        border: 1px solid green;  
+        overflow: hidden;
         //border: 1px solid transparent;
     }    
      
