--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -126,35 +126,125 @@
  &__right{ 
    border: 1px solid fuchsia;  
    width: 100%;
-   width: 720px; 
-   padding-top: 46px;  
+   max-width: 720px; 
+   padding-top: 40px;  
    background-image: url('../images/header/header-right-bg.jpg');  
    background-repeat: no-repeat; 
    background-size: cover; 
    background-position: center;  
-   border-radius: 0px 0px 0px 80px;  
+   border-radius: 0px 0px 0px 80px;   
+   display: flex; 
+   flex-direction: column; 
+   justify-content: space-between;
     
    .menu {
-    margin-left: 54px;
+    margin-left: 93px; 
+    display: flex;  
+    border: 1px solid transparent; 
+    align-items: start;
 
     &__list {
-        display: flex;
+        display: flex; 
+        align-items: start; 
+        border: 1px solid transparent; 
+        margin-top: 6px;
+    } 
+     
+    &__item{ 
+      display: block; 
+      padding: 7px 16px;   
+      // height: 34px;
+      border-radius: 32px;  
+      transition: all .3s; 
+      border: 1px solid rgba(255, 255, 255, 0.3); 
+      background: rgba(255, 255, 255, 0.1);  
+      cursor: pointer; 
+      &:hover{   
+        .menu__link{ 
+          color:#047857;
+        } 
+      }
     }
 
     &__item + .menu__item {
         margin-left: 24px;
-    }
+    } 
 
+    &__item.menu__item-submenu{ 
+      margin-left: 0; 
+    }  
+     
+    &__link--arrow::after{ 
+      content:'';  
+      width: 14px;
+      height: 9px;
+      border: 1px solid transparent;
+      background-image: url('../images/header/arrow-menu.svg');  
+      background-repeat: no-repeat;    
+      background-position:center; 
+      background-size: cover; 
+      position: absolute; 
+      top: 12px; 
+      right: 15px; 
+    }
 
     &__link {
         @extend %lexend-600;
         color: #F0F3FD;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 18px;
-        transition: all .3s;
-        padding: 8px 16px;
-     }   
-      
+        transition: all .3s; 
+        display: block;
+     }    
+    
+   &__submenu {
+      display: none;  
+      margin-top: 7px; 
+   }
+
+   &__item-submenu {
+      transition: all .5s; 
+      border: none;  
+      padding: 8px 16px 8px 0;  
+      border-radius: 0px;
+      width: 100%;
+      &:hover {
+          background-color: #D1FAE5; 
+          .menu__link--submenu { 
+            color: #047857;
+          }
+      }
+   }
+
+  &__item--property:hover .menu__submenu{
+      display: block;  
+      width: 104px; 
+      border: 1px solid transparent; 
+  }   
+   
+  &__item--property:hover .menu__link--arrow::after{ 
+    background-image: url('../images/header/arrow-menu-open.svg'); 
+ }  
+
+  &__item--property{ 
+    width: 122px; 
+    padding: 7px 44px 7px 16px; 
+    display: block; 
+    position:relative;
+  }
+ 
+  &__sing-up{ 
+    width: 108px; 
+    height: 46px;  
+    padding: 12px 24px; 
+    @extend %lexend-600;  
+    font-size: 14px;
+    background: #D1FAE5; 
+    color: #047857;
+    border-radius: 32px; 
+    margin-left: 56px; 
+  } 
+
      &__btn {
       position: relative;
       width: 50px;
@@ -202,8 +292,62 @@
      }
    }
     
-   }
+   }  
   }  
+
+  &__slider-wrapper{ 
+     border: 1px solid green;  
+     width: 100%;
+     max-width: 672px;  
+     margin: 0 0 48px 48px;
+  }   
+    
+  &__slide-img{ 
+    display: block;
+  } 
+   
+  &__slide-img--customers{ 
+     width: 112px; 
+     height:56px ;
+  } 
+  
+   
+  &__slide-title{  
+     @extend %lexend-600; 
+     font-size: 16px;  
+     color: $main-title-color;
+  } 
+   
+  &__slide-subtitle{ 
+     font-size: 12px; 
+     line-height: 20px; 
+     color:#68799F;
+  }
+
+  &__slide-triple, 
+  &__slide{ 
+    //  width: 100%; 
+     width: 328px; 
+     height: 104px; 
+     border-radius: 32px;  
+     padding: 24px;
+     background: #FFF;
+     box-shadow: 0px 11px 48px rgba(51, 51, 51, 0.06); 
+     display: flex;  
+     justify-content: space-between;
+  }   
+
+  &__slide{  
+    // width: 100%; 
+    width: 202px; 
+  } 
+   
+  .slide{ 
+    padding: 0 8px;
+  }  
+
+   
+  
 }
 
  
