header section ready

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -22,13 +22,33 @@
         margin: 0 auto; 
         padding: 0 15px;  
         border: 1px solid green;  
-        overflow: hidden;
+        // overflow: hidden;
         //border: 1px solid transparent;
-    }    
+    }     
+       
+    .majority-suptitle{     
+      @extend %lexend-500; 
+      font-size: 14px; 
+      line-height: 18px; 
+      color: $main-suptitle-color;
+      text-transform: capitalize; 
      
-    .majority-title{ 
+    }
+     
+    .majority-title{   
+      @extend %lexend-600; 
+      font-size: 32px;
       color: $main-title-color; 
-      line-height: 40px;
+      line-height: 40px;  
+      text-transform: capitalize;
+    } 
+     
+    .majority-btn{ 
+      @extend %%lexend-600; 
+      font-size: 14px; 
+      line-height: 22px;
+      color: #FFF;  
+      border-radius: 32px;
     }
  
 
