--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,10 +2,11 @@
       /*-- colors --*/ 
 
   $main-text-color: #626687;     
+  $main-suptitle-color: #F59E0B;  
   $main-title-color: #1B1C57;
 
+
      
-   
 
   /*-- fonts --*/  
 
