featured section nalf ready

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -31,7 +31,17 @@
       font-size: 14px; 
       line-height: 18px; 
       color: $main-suptitle-color;
-      text-transform: capitalize; 
+      text-transform: capitalize;  
+      position: relative; 
+      &::before{ 
+        content: ''; 
+        width: 32px; 
+        height: 1px; 
+        background-color: $main-suptitle-color; 
+        position: absolute;
+        left: -40px;
+        top: 9px;
+      }
      
     }
      
@@ -44,7 +54,7 @@
     } 
      
     .majority-btn{ 
-      @extend %%lexend-600; 
+      @extend %lexend-600; 
       font-size: 14px; 
       line-height: 22px;
       color: #FFF;  
