--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -400,17 +400,27 @@
   display: flex; 
   align-items:center; 
   justify-content: space-between;
- } 
+ }  
   
  &__icon{  
   margin-right: 11px;
   path {
     fill: #888B97;
    }  
- } 
+ }  
+  
+ &__btn.mixitup-control-active{   
+   border: 1px solid #D1FAE5;
+   background:#D1FAE5; 
+   color:#10B981;
+   path {
+     fill: #10B981;
+    }  
+}
   
  &__items{ 
-  border: 1px solid goldenrod;
+  border: 1px solid goldenrod; 
+  display: flex;
  } 
   
  &__item{  
