--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -355,16 +355,16 @@
 } 
  
 .featured{ 
-  border: 1px solid royalblue;
+  border: 1px solid transparent;
 }  
  
 .featured-inner{ 
-  padding-left: 120px; 
-  border: 1px solid fuchsia; 
+  padding-left: 140px; 
+  border: 1px solid transparent; 
    
   &__top{ 
-    padding-left: 40px; 
-    border: 1px solid sandybrown; 
+    padding-left: 20px; 
+    border: 1px solid transparent; 
     display: flex; 
     align-items: flex-end; 
     margin-bottom: 40px;
@@ -409,7 +409,7 @@
    }  
  }  
   
- &__btn.mixitup-control-active{   
+ &__btn.featured-inner__btn--active{   
    border: 1px solid #D1FAE5;
    background:#D1FAE5; 
    color:#10B981;
@@ -419,20 +419,64 @@
 }
   
  &__items{ 
-  border: 1px solid goldenrod; 
-  display: flex;
+  border: 1px solid transparent; 
+  
+   
+  .slick-arrow {
+    background-color: #10B981; 
+    width: 60px;
+    height: 52px; 
+    border-radius: 32px;
+    cursor: pointer;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    top: -95px;
+    right: 0; 
+    path {
+      fill: #FFF;
+     }   
+
+   }  
+   
+  .slick-prev {
+    right: 189px;
+   } 
+    
+   .slick-next{ 
+    right: 115px;
+   }    
+    
+   .slick-disabled{  
+      background-color:#E0E3EB;
+     path {
+       fill: #3C4563;
+      }   
+   }
+    
+   .slick-btn{ 
+       padding: 12px, 16px, 12px, 16px; 
+       display: flex; 
+       justify-content: center; 
+       align-items: center;
+   }
+
  } 
   
  &__item{  
   border: 1px solid transparent;
-  background:#047857; 
-  max-width: 340px;
- } 
+  background: transparent; 
+  max-width: 340px; 
+ }  
+  
+ .slick-slider .slick-slide {
+  padding: 0 20px;
+}
   
  &__img-wrapper{ 
   border-radius: 24px; 
   overflow: hidden; 
-  border: 1px solid pink; 
+  border: 1px solid transparent; 
   position: relative; 
   margin-bottom: 24px;
  }  
@@ -495,7 +539,7 @@
  } 
   
  &__person{ 
-   border: 1px solid fuchsia; 
+   border: 1px solid transparent; 
    padding-left: 56px; 
    position: relative;
  } 
@@ -521,7 +565,8 @@
   line-height: 22px; 
   color:#888B97; 
   text-transform: capitalize;
-}
+} 
+ 
 
 }
 
