--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -901,6 +901,75 @@
    text-transform: capitalize;
   }   
    
+} 
+ 
+.blog{   
+  width: 100%;
+  max-width: 1200px; 
+  margin: 0 auto; 
+  padding-top: 120px;   
+   
+ &__suptitle{ 
+  text-align: center;  
+  width: 100%;
+  max-width: 281px; 
+  margin: 0 auto 12px; 
+  &::before{ 
+    top: -8px; 
+    left: 121px;
+  }
+ } 
+  
+ &__title{  
+  width: 100%;
+  max-width: 424px; 
+  text-align: center; 
+  margin: 0 auto 24px;
+} 
+ 
+&__btn{ 
+  background: #10B981; 
+  padding: 12px 16px; 
+  margin: 0 auto; 
+  margin-bottom: 42px; 
+  display: block; 
+  width: 118px;
+}   
+  
+&__left{  
+  width: 100%;
+  max-width: 572px;
+} 
+ 
+&__person{ 
+  border: 1px solid transparent; 
+  padding-left: 56px; 
+  position: relative;
+} 
+ 
+&__person-img{ 
+ position: absolute; 
+ left: 0px; 
+ bottom: 5px;
+} 
+
+&__person-title{ 
+ @extend %lexend-500; 
+ font-size: 18px; 
+ line-height: 24px; 
+ color:#0E1735; 
+ margin-bottom: 4px; 
+ text-transform: capitalize;
+} 
+ 
+&__person-subtitle{ 
+ @extend %lexend-500; 
+ font-size: 14px; 
+ line-height: 22px; 
+ color:#888B97; 
+ text-transform: capitalize;
+}   
+
 }
  
 
