--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1000,7 +1000,8 @@
   @extend %lexend-500;  
   font-size: 18px; 
   line-height: 32px; 
-  color:#1B1C57;
+  color:#1B1C57; 
+  margin-bottom: 16px;
 }
  
 &__time-wrapper{ 
@@ -1038,6 +1039,121 @@
 &__right-text{ 
   margin-bottom: 16px;
 }
+
+} 
+ 
+.subscribe{  
+  width: 100%;
+  max-width: 1200px; 
+  margin: 0 auto; 
+  border-radius:32px; 
+  border: 1px solid transparent; 
+  background-image: url('../images/subscribe/subscribe-bg.jpg'); 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  background-position: center; 
+  position: relative;  
+
+  &__title{ 
+    line-height: 48px;  
+    width: 100%;
+    max-width: 424px; 
+    margin: 65px auto 32px;
+  }  
+   
+  &__decor-1{  
+    position: absolute; 
+    top: 38px; 
+    left: 44px;
+  } 
+   
+  &__decor-2{ 
+    position: absolute;  
+    top: 71px;  
+    left: 204px;
+  } 
+   
+  &__decor-3{ 
+    position: absolute; 
+    bottom: 103px; 
+    left: 67px;
+  } 
+   
+  &__decor-4{ 
+    position: absolute; 
+    bottom: 80px; 
+    left: 195px;
+  } 
+   
+  &__decor-5{ 
+    position: absolute; 
+    top: 44px; 
+    right: 200px;
+  } 
+   
+  &__decor-6{ 
+    position: absolute; 
+    top: 107px; 
+    right: 82px;
+  } 
+   
+  &__decor-7{ 
+    position: absolute; 
+    top: 143px; 
+    right: 200px;
+  } 
+   
+  &__decor-8{ 
+    position: absolute; 
+    bottom: 60px; 
+    right: 73px;
+  }
+   
+ &__form{  
+    width: 100%;
+    max-width: 496px; 
+    margin: 0 auto 65px; 
+    position: relative; 
+    border: 1px solid transparent;  
+  } 
+   
+  &__input{  
+    width: 100%;
+    max-width: 496px;  
+    height: 54px;
+    border-radius: 32px; 
+    padding: 16px 149px 16px 64px;  
+    outline-color:#3B82F6; 
+    border: 1px solid transparent; 
+  } 
+   
+  &__input::placeholder{ 
+    @extend %lexend-500;  
+    font-size: 14px; 
+    line-height: 22px; 
+    color: #888B97;
+  } 
+   
+  &__btn{  
+    width: 129px;  
+    height: 46px; 
+    @extend %lexend-600;  
+    color: #FFF; 
+    border-radius: 32px; 
+    border: none; 
+    background: #10B981;  
+    cursor: pointer;
+    position: absolute; 
+    top: 4px; 
+    right: 4px;
+  } 
+   
+  &__input-decor{ 
+    position: absolute;  
+    left: 26px; 
+    top: 19px;
+
+  }
 
 }
  
