header section responsive

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -22,8 +22,8 @@
         margin: 0 auto; 
         padding: 0 15px;  
         // border: 1px solid green;  
-        // overflow: hidden;
-        border: 1px solid transparent;
+        border: 1px solid transparent; 
+        overflow: hidden;
     }     
        
     .majority-suptitle{     
