--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -21,8 +21,8 @@
         max-width: 1470px; 
         margin: 0 auto; 
         padding: 0 15px;  
-        // border: 1px solid green;  
-        border: 1px solid transparent; 
+        border: 1px solid green;  
+        // border: 1px solid transparent; 
         overflow: hidden;
     }     
        
